<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/editTextNumber1"
        android:hint="@string/enter_number1"
        android:layout_width="236dp"
        android:layout_height="67dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="90dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="85dp"
        android:layout_marginBottom="638dp"
        android:ems="10"
        android:inputType="number" />

    <EditText
        android:id="@+id/editTextNumber2"
        android:hint="@string/enter_number2"
        android:layout_width="238dp"
        android:layout_height="74dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="91dp"
        android:layout_marginTop="133dp"
        android:layout_marginEnd="82dp"
        android:layout_marginBottom="524dp"
        android:ems="10"
        android:inputType="number" />

    <Button
        android:id="@+id/add1"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="83dp"
        android:layout_marginTop="321dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="332dp"
        android:text="@string/add" />

    <Button
        android:id="@+id/subtract2"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="83dp"
        android:layout_marginTop="415dp"
        android:layout_marginEnd="88dp"
        android:layout_marginBottom="238dp"
        android:text="@string/subtract" />

    <Button
        android:id="@+id/multiply3"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="80dp"
        android:layout_marginTop="609dp"
        android:layout_marginEnd="91dp"
        android:layout_marginBottom="44dp"
        android:text="@string/multiply" />

    <Button
        android:id="@+id/divide4"
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="82dp"
        android:layout_marginTop="512dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="141dp"
        android:text="@string/divide" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="202dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="94dp"
        android:layout_marginTop="234dp"
        android:layout_marginEnd="115dp"
        android:layout_marginBottom="444dp"
        android:text="@string/result"
        android:textSize="20sp" />

    <Button
        android:id="@+id/clear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="13dp"
        android:layout_marginBottom="419dp"
        android:text="@string/clear" />
</RelativeLayout>